--- a/Trabalho/nbproject/private/private.properties
+++ b/Trabalho/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Jessica\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\J\u00e9ssica Petersen\\AppData\\Roaming\\NetBeans\\15\\build.properties
